# fast-api

./: .gitignore  pyproject.toml
migrations/: env.py
migrations/versions/: 4715997c47ae_create_products_table.py
products_api/: app.py
products_api/core/: database.py
products_api/models/: __init__.py  products.py
products_api/routers/: products.py
products_api/schemas/: products.py
